# fast_tracker

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  docker-compose.test.yaml  docker-compose.yml  mypy.ini  pyproject.toml
app/: __main__.py  models.py
app/api/v1/: __init__.py  activity.py  auth.py  journal.py  todos.py
app/core/: config.py  exceptions.py  schema.py  setup.py
app/dependencies/: activity.py  auth.py  db_session.py
app/domain/: activity.py  activity_task.py  activity_type.py  reporting_period.py  session.py  todo.py  user.py  worklog.py
app/dto/: activity.py  auth.py  journal.py  reporting_period.py  session.py  todo.py
app/redis_client/: __init__.py  client.py
app/seed/: data.py
app/services/: activity.py  auth.py  base.py  journal.py  session.py  todo.py
app/utils/: date_utils.py
docs/: DbDesign.dbml  DbDesign.md
migrations/: env.py
migrations/versions/: 096a9ef46a20_change_uq_activity_task.py  13d08d795146_removed_unexpected_hours_monthly_field.py  21ce19e90146_added_reltaions_to_user_tasks_worklogs.py  296e8f07f75a_init_models.py  49987cbed3c3_activity_user_optional_values.py  77d81d86ad07_activity_task_uq_constraint.py  7c0001b03f71_init_models.py  967828c46e3f_worklog_task_id_nullable.py  b707471af2d6_added_uq_worklog_user_task_date_.py  b807c46724da_fix_activity_uq_constraint.py  b8f7db445cff_add_reporting_period_table.py  c1c963e4f75d_change_unique_constraint_activity_tasks.py  c2d9b55b6856_init_models.py  eecd4fb2c634_at_field_session.py
tests/: .env.pytest  conftest.py  test_routes.py  test_services.py
(+15 files in other folders)
